# mpi-mxv

./: .gitignore  CMakeLists.txt  README.md  results.txt
data/: matrix_4x5.data  vector_5.data
scripts/: generate.py  run.py
src/: main.cpp
